Send email and sms text after make an appointment.